[package]
name = "fts_autosln"
version = "0.1.0"
edition = "2021"

[dependencies]
which = "4.2.2"
#winapi = "0.3.9"
#winapi = { version = "0.3.9", features = ["dbghelp", "winuser"] }
windows = { version = "0.48.0", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Kernel", "Win32_System_SystemInformation"] }
windows-sys = { version= "0.48.0", features = ["Win32_System_SystemServices"] }