[package]
name = "fts_autosln"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
dashmap = "5.4.0"
itertools = "0.10.5"
rayon = "1.7.0"
pdb = "0.8.0"
sysinfo = "0.28.4"
uuid = { version = "1.3.1", features = ["v4"] }
which = "4.4.0"
windows = { version = "0.48.0", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Kernel", "Win32_System_SystemInformation"] }
windows-sys = { version= "0.48.0", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_SystemServices"] }